--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "express": "^4.19.2",
+    "mysql2": "^3.11.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
