--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^3.1.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.0",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
