--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.3",
+    "chart.js": "^4.4.6",
     "core-js": "^3.8.3",
     "jwt-decode": "^3.1.2",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.0.0",
     "vue-the-mask": "^0.11.1",
     "vuetify": "^3.7.0-beta.1"
